syntax = "proto3";

package gateway;

option go_package = "ggw/proto";

// 服务类型
enum ServiceType {
  UNKNOWN = 0;
  PRODUCER = 1;  // 生产者
  CONSUMER = 2;  // 消费者
}

// 注册请求
message RegisterRequest {
  string service_name = 1;  // 服务名称
  ServiceType service_type = 2;  // 服务类型
}

// 注册响应
message RegisterResponse {
  bool success = 1;
  string message = 2;
  string service_id = 3;  // 网关分配的服务ID
}

// 转发消息（通用消息格式）
message ForwardMessage {
  string target_service = 1;  // 目标服务名称
  bytes payload = 2;  // 消息负载
  map<string, string> metadata = 3;  // 元数据
}

// 转发响应
message ForwardResponse {
  bool success = 1;
  string message = 2;
  bytes payload = 3;  // 响应负载
}

// 网关服务
service GatewayService {
  // 注册服务
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // 双向流：用于消息转发
  rpc Stream(stream ForwardMessage) returns (stream ForwardResponse);
}

